@@ -1105,6 +1105,12 @@ women).  They receive one bonus Constitution point, but lose one Charisma point.
 have Infravision, or the ability to see other creatures in the dark.  Dwarves are natural \
 Miners, though their class choices will be limited.
 
+GNOLL=<RACE>\
+Gnolls are viscous anthropomorphic hyena-men.  They stand 6 feet to 7 and a half feet tall, \
+are lean and very viscous.  Gnolls enjoy displays of cruelty and mercilessness, often pulling \
+limbs from their living prey.  They hunt creatures of all sorts, but particularly enjoy hunting \
+intelligent species.
+
 OGRE=<RACE>\
 Ogres are the less enlightened kin to the giants, possessing great strength and ferociousness at \
 the expense of their intellect and dexterity .  As they are naturals at ripping things apart, they \
