@@ -1042,6 +1042,14 @@ allowing him or her to spot any hidden things in the \
 area. The longer the thief looks around, the more he \
 will see.
 
+DEVOUR_CORPSE=SKILL_DEVOURCORPSE
+DEVOURCORPSE=SKILL_DEVOURCORPSE
+SKILL_DEVOURCORPSE=<ABILITY>\
+This skill grants the ability to eat the corpses of creatures up to those moderately \
+larger than the character.  The corpse must be emptied of any equipment before doing \
+so, and the corpses of other players may be restricted.
+ 
+
 SKILL_DIRT=DIRT
 DIRT=<ABILITY>\
 Usage    : DIRT [TARGET NAME] \n\r\
