@@ -20,7 +20,9 @@
    19. ZapperMask now supports IFSTAT, CLASSTYPE, SUBNAME, WEAPONTYPE, WEAPONCLASS, WEAPONAMMO
    20. 14 new Proficiency Skills, for overriding Class Restrictions
    21. Halflings get Fast Slinging, Sling Proficiency, Humans get Diligent Studying
-   22. Ogres got Bad Reputation
+   22. New Skills: Devour Corpse
+   23. Ogres got Bad Reputation
+   24. New Player Race: Gnoll, also gets Devour Corpse
 # Build 5.9.4 Released 08/03/2016
    1. Qualify now shows language limits
    2. New Prop_NoTeleport exceptions
